--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -145,3 +145,21 @@ URL = {https://doi.org/10.1214/09-SS053}
   year={1984},
   publisher={Wiley Online Library}
 }
+
+@book{mclachlan1988mixture,
+  title={Mixture models: Inference and applications to clustering},
+  author={McLachlan, Geoffrey J and Basford, Kaye E},
+  volume={38},
+  year={1988},
+  publisher={M. Dekker New York}
+}
+
+@article{Dempster1977,
+  title={Maximum likelihood from incomplete data via the EM algorithm},
+  author={Dempster, A. P. and Laird, N. M. and Rubin, D. B.},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={39},
+  number={1},
+  pages={1--22},
+  year={1977}
+}
