--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -137,7 +137,8 @@ where:
     \item The model assumes that the effect of the predictors on the log odds of being in a lower versus a higher category is proportional across all categories, which is encapsulated in the term $\boldsymbol{\beta}^T\mathbf{X}$.
 \end{itemize}
 
-The Proportional Odds assumption implies that the vector of coefficients $\boldsymbol{\beta}$ is the same across all category thresholds, facilitating a simpler interpretation and analysis. (McCullagh, 1980~\cite{mccullagh1980regression})
+% Task 17
+The Proportional Odds assumption implies that the vector of coefficients $\boldsymbol{\beta}$ is the same across all category thresholds. (~\cite{mccullagh1980regression})
 
 
 % Task 10, move before FMM.
