--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -79,21 +79,21 @@ This demonstrates that performing arithmetic calculations on the numerical value
     \label{fig:ordinal} % Label for referencing the figure in the text
   \end{figure}
 
-\subsection*{Comparison with continuous data}
+\subsection*{Comparison with continuous numerical data}
 
-In the context of statistical analysis, the distinction between ordinal and continuous data types is pivotal, influencing both the choice of analytical methods and the depth of insights that can be derived. 
-Ordinal data, characterized by its capacity to rank order categories without indicating precise differences between them, is inherently less informative than continuous data. 
-Continuous data, with its quantitative nature, allows for an infinite range of values and supports detailed statistical operations, including arithmetic calculations and the application of advanced statistical models, facilitating a nuanced understanding of variables and their interrelations (Stevens, 1946~\cite{Stevens1946}).
+In the context of statistical analysis, the distinction between ordinal and continuous numerical data types is pivotal, influencing both the choice of analytical methods and the depth of insights that can be derived. 
+Ordinal data, characterized by its capacity to rank order categories without indicating precise differences between them, is inherently less informative than continuous numerical data. 
+Continuous numerical data, with its quantitative nature, allows for an infinite range of values and supports detailed statistical operations, including arithmetic calculations and the application of advanced statistical models, facilitating a nuanced understanding of variables and their interrelations (Stevens, 1946~\cite{Stevens1946}).
 
 The limitations of ordinal data stem from its inability to quantify the exact magnitude of differences between categories, a factor that restricts the application of parametric statistical methods. This constraint necessitates reliance on non-parametric methods, focusing on medians and modes rather than means and standard deviations, thereby offering a less detailed analysis (Conover, 1999~\cite{Conover1999}). 
 For instance, in Likert scale responses commonly used in surveys, the ordinal nature of data precludes meaningful calculations of averages or differences between responses, limiting the depth of analysis that can be achieved (Likert, 1932~\cite{Likert1932}).
 
 % task 7
-Comparatively, continuous data's capacity for precise measurement and the application of a broader range of statistical analyses enables a more detailed and accurate exploration of phenomena. 
-This capability is contingent upon the availability of continuous results, which may not always be feasible. The nature of the data collectible in certain research scenarios—such as measuring opinions, attitudes, or perceptions—often necessitates the use of ordinal data, due to the challenges associated with obtaining continuous measurements in these contexts. For instance, eliciting responses on a continuous percentage scale from 0 to 100 can be impractical when assessing subjective experiences or preferences. Hence, the decision to utilize ordinal data over continuous data is not solely a matter of choice in research design and analysis but is also influenced by the practicalities of what data can realistically be gathered. This consideration is crucial for ensuring the validity and relevance of research findings, highlighting the importance of aligning data collection methods with the specific circumstances and constraints of the study.
+Comparatively, continuous numerical data's capacity for precise measurement and the application of a broader range of statistical analyses enables a more detailed and accurate exploration of phenomena. 
+This capability is contingent upon the availability of continuous numerical results, which may not always be feasible. The nature of the data collectible in certain research scenarios—such as measuring opinions, attitudes, or perceptions—often necessitates the use of ordinal data, due to the challenges associated with obtaining continuous measurements in these contexts. For instance, eliciting responses on a continuous percentage scale from 0 to 100 can be impractical when assessing subjective experiences or preferences. Hence, the decision to utilize ordinal data over continuous numerical data is not solely a matter of choice in research design and analysis but is also influenced by the practicalities of what data can realistically be gathered. This consideration is crucial for ensuring the validity and relevance of research findings, highlighting the importance of aligning data collection methods with the specific circumstances and constraints of the study.
 
 In summary, while ordinal data is invaluable for capturing rankings and subjective assessments, 
-its analytical limitations highlight the superior informational value of continuous data in quantitative research. 
+its analytical limitations highlight the superior informational value of continuous numerical data in quantitative research. 
 This distinction is crucial for researchers in the selection of appropriate statistical methods and in the interpretation of their data, 
 ensuring that conclusions drawn are both valid and meaningful.
 
